@@ -14,6 +14,7 @@ Date: ????
     - Require factory planner version with quality buttons
     - Restrict factory districts
     - Cleanup factory district icon renderer
+    - Provide factory info in the tooltip
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.9
 Date: 2025. 06. 12
